--- a/birthday/main.html
+++ b/birthday/main.html
@@ -220,6 +220,22 @@
                     </div>
                 </a>
             </div>
+            <h2 class="title_img_blue" style="margin:0;">
+                <div>2022</div>
+            </h2><br>
+            <div class="area_birthday jsOnBanner">
+                <a href='kiyomi2022.html' class="banner_birthday_renewal area_banner_wrap">
+                    <div class="text_area">9월26일</div>
+                    <div class="idol_lbirthday">
+                        <ul>
+                            <li><img src='../image_sp/card/xs/kiyomi_36.jpg' width="30"></li>
+                        </ul>
+                    </div>
+                    <div class="idol_lbirthday_text count_1">
+                        <div>키요미</div>
+                    </div>
+                </a>
+            </div>
         </section>
         <script src="../js/min/mypage.min.js"></script>
         <script src="../js/islider.js"></script>
