--- a/timeline.html
+++ b/timeline.html
@@ -9,16 +9,16 @@
 <div id="container">    
     <header>
         <div id="logo">
-        <a href="index-footer.html">
+        <a href="mypage.html">
         <h1>후미카 연표</h1>
         </a>
         </div>
         <nav>
             <ul id="topMenu">
-                <li><a href="#">후미후미</a></li>
-                <li><a href="#">후미후미</a></li>
-                <li><a href="#">후미후미</a></li>
-                <li><a href="#">후미후미</a></li>
+                <li><a href="#">카드</a></li>
+                <li><a href="#">에피소드</a></li>
+                <li><a href="#">이벤트</a></li>
+                <li><a href="#">기타</a></li>
             </ul>
         </nav>
     </header>
