--- a/memory/onetime_flash/show_swf/200426_k.html
+++ b/memory/onetime_flash/show_swf/200426_k.html
@@ -133,49 +133,49 @@
             "url": "../../../mypage.html",
             "item_flag": "0",
             "num_countdown": "6",
-            "txt1_1": "10000ぷちﾏﾆｰとｼﾞｭｴﾙ100個を",
-            "txt1_2": "GET! 贈り物から受け取ってください｡",
-            "txt1_3": "ﾌﾘｰﾄﾚｰﾄﾞﾁｹｯﾄを3枚ﾌﾟﾚｾﾞﾝﾄ｡ ※3枚以上",
-            "txt1_4": "所持している場合は付与されません｡",
+            "txt1_1": "10000푸치머니와 쥬얼 100개를",
+            "txt1_2": "GET! 선물함에서 받아주십시오.",
+            "txt1_3": "자유무역티켓을 3개 선물. ※3개 이상",
+            "txt1_4": "소지한 경우 부여되지 않습니다.",
             "cp_day": "5",
             "first_flag": 1,
             "rocket_position": 0,
             "s1_1_bgimg": "bg00001",
-            "s1_1_name": "奏",
-            "s1_1_txt": "いよいよｱﾆﾊﾞｰｻﾘｰ…終わりと始ま\nりの時ね｡笑顔には祝福のｷｽを､涙\nには慰めのｷｽを｡私たちの想いは､\n貴方とともにあるわ",
+            "s1_1_name": "카나데",
+            "s1_1_txt": "드디어 애니버서리… 끝과 시작의 시간이네.\n미소에는 축복의 키스를,\n눈물에는 위로의 키스를.\n우리의 추억은, 당신과 함께 있어.",
             "s1_1_ch1_no": 1,
             "s1_1_ch1_pos": "LL",
             "s1_1_ch1_mov": "in_L",
             "s1_1_ch1_face": "1",
-            "s1_1_ch1_cname": "奏",
-            "s2_1_name": "美波",
-            "s2_1_txt": "ふふっ､少し早いけど､ﾄﾞｷﾄﾞｷして\nきましたっ｡貴方や､ﾌｧﾝのみなさ\nん…大切な人たちと寄り添って､\n迎えたいと思います♪",
+            "s1_1_ch1_cname": "카나데",
+            "s2_1_name": "미나미",
+            "s2_1_txt": "후훗, 조금 이르지만, 두근두근하고\n있습니다. 당신이나, 팬 여러분…\n소중한 사람들과 가까이 붙어,\n맞이하고 싶습니다♪",
             "s2_1_ch1_no": 2,
             "s2_1_ch1_pos": "C",
             "s2_1_ch1_mov": "in_R",
             "s2_1_ch1_face": "1",
-            "s2_1_ch1_cname": "美波",
-            "s3_1_name": "アナスタシア",
-            "s3_1_txt": "夢のような時間まで､あと少しで\nすね｡星の瞬く夜も､特別な日も､\nみなさんと一緒に迎えられる…と\nても嬉しいです♪",
+            "s2_1_ch1_cname": "미나미",
+            "s3_1_name": "아나스타샤",
+            "s3_1_txt": "꿈같은 시간까지, 앞으로 조금이네요.\n별이 빛나는 밤도, 특별한 날도,\n여러분과 함께 맞이할 수 있어…\n너무 기쁩니다♪",
             "s3_1_ch1_no": 3,
             "s3_1_ch1_pos": "RR",
             "s3_1_ch1_mov": "in_R",
             "s3_1_ch1_face": "1",
-            "s3_1_ch1_cname": "アナスタシア",
-            "s4_1_name": "文香",
-            "s4_1_txt": "…紡がれ続けた物語は､ｱﾆﾊﾞｰｻﾘｰ\nをもって次の章へと進みます｡頁\nがめくられる瞬間の歓びを…とも\nに分かち合いましょう",
+            "s3_1_ch1_cname": "아나스타샤",
+            "s4_1_name": "후미카",
+            "s4_1_txt": "…계속 자아낸 이야기는, 애니버서리를 통해\n다음 장으로 넘어갑니다.\n페이지가 넘어가는 순간의 기쁨을…\n함께 나누죠.",
             "s4_1_ch1_no": 4,
             "s4_1_ch1_pos": "LL",
             "s4_1_ch1_mov": "in_L",
             "s4_1_ch1_face": "1",
-            "s4_1_ch1_cname": "文香",
-            "s5_1_name": "楓",
-            "s5_1_txt": "私もｺﾒﾝﾄに気持ちを込めんとと…\n気合が入ります｡ふふっ♪…いつ\nまでも心に残るような､素敵なｲﾍﾞ\nﾝﾄにしましょうね",
+            "s4_1_ch1_cname": "후미카",
+            "s5_1_name": "카에데",
+            "s5_1_txt": "저도 코멘트에 마음을 담으려고…\n기합이 들어가네요. 후훗♪…\n언제까지라도 마음에 남을만한,\n멋진 이벤트로 만들죠.",
             "s5_1_ch1_no": 5,
             "s5_1_ch1_pos": "C",
             "s5_1_ch1_mov": "in_R",
             "s5_1_ch1_face": "5",
-            "s5_1_ch1_cname": "楓",
+            "s5_1_ch1_cname": "카에데",
             "cpt_end": "",
             "init_chara_num": 0,
             "place_name": null,
@@ -190,7 +190,7 @@
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
-        window.im_cjs.jump_url = '../../../../mypage.html'; // createjsの演出が全て終了した場合の飛び先urlの定義
+        window.im_cjs.jump_url = '../../../mypage.html'; // createjsの演出が全て終了した場合の飛び先urlの定義
         var _ua = navigator.userAgent;
         var ios_app_flg = false;
         var ios_browser_flg = (_ua.indexOf('iPhone') !== -1) ? true : false;
