--- a/memory/anniversary.html
+++ b/memory/anniversary.html
@@ -73,6 +73,10 @@
             <a class="btn_normal_line_2 " href='bonus_event/bonus_flash_for_stamp/happy_summer_2020.html'><span style="font-size: 12px;">여름 로그인 연출</span></a>
             <a class="btn_normal_line_2 " href='onetime_flash/show_swf/200294.html'><span style="font-size: 12px;">9주년 카운트다운</span></a>
         </div>
+        <div class="area-btn-common _base-width m-Btm8">
+            <a class="btn_normal_line_2 " href='onetime_flash/show_swf/200426.html'><span style="font-size: 12px;">11th アニバーサリー</span></a>
+            <a class="btn_normal_line_2 " href='onetime_flash/show_swf/200426_k.html'><span style="font-size: 12px;">11주년 카운트다운</span></a>
+        </div>
         <div class="t-Cnt m-Btm12" style="margin-top:12px">
         <a href="../event_produce/select_idol_for_memorial_9.html" class="jsOnDesignBtn"><img src="../image_sp/event/1731/extramemory/extra_banner.png" width="280" height="44"></a>
         </div>
