--- a/last_cinderella_story/1.html
+++ b/last_cinderella_story/1.html
@@ -9962,7 +9962,7 @@
         };
         window.im_cjs.title_name = '第1話' || 'no_title';
         window.im_cjs.event_type = '3' || 0;
-        window.im_cjs.jump_url = 'https://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/last_cinderella_story/index%3Fl_frm%3DLast_cinderella_story_read_1%26rnd%3D989706764'; // createjsの演出が全て終了した場合の飛び先urlの定義
+        window.im_cjs.jump_url = 'index.html'; // createjsの演出が全て終了した場合の飛び先urlの定義
         window.im_cjs.chara_num = 40;
         window.im_cjs.voice_flag = 0; // 音声再生フラグを定義
     </script>
