--- a/mypage.html
+++ b/mypage.html
@@ -77,7 +77,7 @@
                     <li><a class="head_menu_01" href="mypage.html">
                             <div></div>
                         </a></li>
-                    <li><a class="head_menu_02" href="petit_cg.html">
+                    <li><a class="head_menu_02" href="petit_cg_fumika.html">
                             <div></div>
                         </a></li>
                     <li><a class="head_menu_03" href="">
