--- a/petit_cg_fumika.html
+++ b/petit_cg_fumika.html
@@ -1763,7 +1763,7 @@
                     if ($.isEmptyObject(episodes)) {
                         var showHtml = "<div class='ep_list red' style='margin-left:6px;'>開放されているエピソードがありません。</div>";
                     } else {
-                        var baseUrl = ('https://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/petit_cg/petit_show_episode/__idol_ld__/__episode__/coordinate_idol/__position');
+                        var baseUrl = ('memory/puchi_episode/fumika/__episode__.html');
                         baseUrl = baseUrl.replace('__idol_ld__', idol_id);
                         baseUrl = baseUrl.replace('__position__', chara());
                         var showHtml = "<ul class='ep_list'>";
