--- a/memory/puchi_episode/fumika/2.html
+++ b/memory/puchi_episode/fumika/2.html
@@ -11,7 +11,7 @@
         <script type="text/javascript" nonce="XOJ0BVE+zr3qdJZKBBAaLFbFzesxhK/xP1QmLnOdycs=" src="//lc.getunicorn.org?type=base-script&amp;request-id=8048"></script>
         <link rel="stylesheet" href='../../../css/game/pex.css' media="all">
         <script src='../../../js/jquery-1.9.1.min.js'></script>
-        <script src='../../../js/pex-1.2.0.js'></script>
+        <script src='../../../js/pex-1.2.0-furiousjhin.js'></script>
         <script src='../../../js/pex_common.js'></script>
         <script>
             $(document).ready(function() {
