--- a/petit_cg_kiyomi.html
+++ b/petit_cg_kiyomi.html
@@ -434,6 +434,13 @@
                 </div>
                 <div id="profile_comments" class="jsTabArea area_tab_4" style="display:none">
                     <div class="in_block area-slide flagAndroid" style="height: 262px; position: relative;">
+                        <ul class="comments_tabs" style="margin-top: 6px;">
+                            <li class="tab_comm tab_comm_top selected" name="tab_comm_top" data-key="top"></li>
+                            <li class="tab_comm tab_comm_lesson" name="tab_comm_lesson" data-key="lesson"></li>
+                            <li class="tab_comm tab_comm_shop" name="tab_comm_shop" data-key="shop"></li>
+                            <li class="tab_comm tab_comm_coor" name="tab_comm_coor" data-key="coordinate"></li>
+                            <li class="tab_comm tab_comm_tech" name="tab_comm_tech" data-key="tech_board"></li>
+                        </ul>
                         <div class="select_area">
                             <div class="form_area">
                                 <form action="#" name="form1" method="post">
