--- a/results.html
+++ b/results.html
@@ -125,7 +125,7 @@
             <table style="width:320px">
                 <tr>
                     <td style="width:110px;vertical-align:middle" class="t-Cnt"><img src='image_sp/ui/icon_rank_emblem_kojin_109.jpg' width="100"></td>
-                    <td style="vertical-align:middle;line-height:140%" class="t-Lft"><span class="blue">プロデューサー:</span>&nbsp;プロデューサー</a><br><span class="blue">S3:</span>&nbsp;アイドルマスター<br><span class="blue">ファン:</span>&nbsp;2323,2323,2323人
+                    <td style="vertical-align:middle;line-height:140%" class="t-Lft"><span class="blue">プロデューサー:</span>&nbsp;貴方</a><br><span class="blue">S3:</span>&nbsp;アイドルマスター<br><span class="blue">ファン:</span>&nbsp;2323,2323,2323人
                     </td>
                 </tr>
             </table>
