--- a/results.html
+++ b/results.html
@@ -116,7 +116,7 @@
         <div class="area-btn-common _base-width m-Btm8 m-Top8">
             <a href="https://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/idol_story" class="btn_normal_line_4 _line_2" style="font-size:11px">思い出<br>エピソード</a>
             <a href="results/title_cool.html" class="btn_normal_line_4">肩書</a>
-            <a href="https://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/results/loading_idol_edit" class="btn_normal_line_4 _free_line">
+            <a href="results/loading_idol_cool.html" class="btn_normal_line_4 _free_line">
                 <div class="text-elem" style="font-size:10px">ローディングキャラ</div>
             </a>
             <a href="https://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/results/game_center_title" class="btn_normal_line_4">称号</a></div>
